project(SancusCore NONE)

cmake_minimum_required(VERSION 2.8)

set(INSTALL_DATA_PATH "share/sancus")
set(FULL_INSTALL_DATA_PATH ${CMAKE_INSTALL_PREFIX}/${INSTALL_DATA_PATH})

set(INSTALL_RTL_PATH "${INSTALL_DATA_PATH}/rtl")
set(FULL_INSTALL_RTL_PATH ${CMAKE_INSTALL_PREFIX}/${INSTALL_RTL_PATH})

set(INSTALL_SIM_PATH "${INSTALL_RTL_PATH}/sim")
set(FULL_INSTALL_SIM_PATH ${CMAKE_INSTALL_PREFIX}/${INSTALL_SIM_PATH})

set(INSTALL_TOOLS_PATH "${INSTALL_DATA_PATH}/tools")
set(FULL_INSTALL_TOOLS_PATH ${CMAKE_INSTALL_PREFIX}/${INSTALL_TOOLS_PATH})

add_subdirectory(core)
add_subdirectory(tools)

set(CPACK_GENERATOR "DEB")

set(CPACK_PACKAGE_NAME "sancus-core")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_PACKAGE_CONTACT "Job Noorman <Job.Noorman@cs.kuleuven.be>")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Sancus core")

set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "all")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "iverilog, python2.7")
set(CPACK_DEBIAN_PACKAGE_HOMEPAGE
    "http://people.cs.kuleuven.be/~job.noorman/sancus")

include(CPack)
